# fish_it_scrapy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fish_it/: 2023-08-05-alsuper.json  alsuper.json  alsuperData.json  scrapy.cfg
fish_it/fish_it/: items.py  middlewares.py  pipelines.py  settings.py
fish_it/fish_it/spiders/: alsuper.py  alsuper_keys.txt
fish_it_scrapy/: keys.txt  main.py  ms-products.txt  products.txt
