[tool.poetry]
name = "fish-it-scrapy"
version = "0.1.0"
description = ""
authors = ["Andrés Morales Reyes <sharker92@hotmail.com>"]
packages = [{include = "fish_it_scrapy"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
ipython = "^8.14.0"
parsel = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
